Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -13,3 +13,11 @@ div {
 #red {
   border-top-color: red;
 }
+
+#orange {
+  border-top-color: orange; 
+}
+
+#yellow {
+  border-top-color: yellow; 
+}
